Project add_product_design {
  database_type: 'MySQL'
  Note: 'Schema Add Product và Product Variant đã áp dụng bằng migration 20260811160000. Bảng categories vẫn là đề xuất ngoài phạm vi triển khai này.'
}

Table users [note: 'ĐÃ XÁC NHẬN TỪ CODE VÀ DATABASE: tài khoản mua/bán dùng chung.'] {
  id bigint [pk, increment, note: 'ĐÃ XÁC NHẬN TỪ CODE: khóa chính.']
  full_name varchar(100) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  email varchar(150) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  phone varchar(20) [note: 'ĐÃ XÁC NHẬN TỪ CODE; có thể null.']
  address varchar(255) [note: 'ĐÃ XÁC NHẬN TỪ CODE; có thể null.']
  password varchar(255) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE: mật khẩu đã băm.']
  role varchar(20) [not null, default: 'user', note: 'ĐÃ XÁC NHẬN TỪ CODE; MVP không cần thêm seller.']
  status varchar(20) [not null, default: 'active', note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  avatar_url varchar(255) [note: 'ĐÃ XÁC NHẬN TỪ CODE; lưu đường dẫn tương đối.']

  indexes {
    email [unique, name: 'email']
    phone [unique, name: 'phone']
  }
}

Table sessions [note: 'ĐÃ XÁC NHẬN TỪ CODE VÀ DATABASE: connect-session-sequelize lưu session; user id nằm trong data đã serialize nên không có FK trực tiếp.'] {
  sid varchar(36) [pk, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  expires datetime [note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  data text [note: 'ĐÃ XÁC NHẬN TỪ CODE: dữ liệu session đã serialize.']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']

  indexes {
    expires [name: 'sessions_expires']
  }
}

Table categories [note: 'ĐỀ XUẤT: danh mục chuẩn hóa thay cho danh sách tĩnh ở frontend và chuỗi tự do trong products.category.'] {
  id bigint [pk, increment, note: 'ĐỀ XUẤT: khóa chính theo convention BIGINT của project.']
  name varchar(100) [not null, note: 'ĐỀ XUẤT: tên hiển thị duy nhất.']
  slug varchar(120) [not null, note: 'ĐỀ XUẤT: định danh URL ổn định.']
  status varchar(20) [not null, default: 'active', note: 'ĐỀ XUẤT: active hoặc inactive.']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐỀ XUẤT: theo convention timestamps của project.']
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐỀ XUẤT: theo convention timestamps của project.']

  indexes {
    name [unique, name: 'categories_name_unique']
    slug [unique, name: 'categories_slug_unique']
    status [name: 'categories_status']
  }
}

Table products [note: 'ĐÃ ÁP DỤNG: thông tin chung của sản phẩm; tồn kho chuẩn nằm ở product_variants.stock_quantity.'] {
  id bigint [pk, increment, note: 'ĐÃ XÁC NHẬN TỪ CODE: khóa chính.']
  owner_id bigint [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE: tài khoản tạo và sở hữu sản phẩm.']
  title varchar(180) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  description text [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  category varchar(100) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE: slug danh mục từ danh sách chuẩn dùng chung.']
  brand varchar(100) [note: 'ĐÃ ÁP DỤNG: thương hiệu dạng text, có thể null.']
  price decimal(12,2) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE: giá cơ sở/giá hiển thị; variant có thể ghi đè.']
  stock int [not null, default: 0, note: 'LEGACY: giữ để tương thích dữ liệu cũ, code mới không dùng làm nguồn tồn kho.']
  weight_grams int [note: 'ĐÃ XÁC NHẬN TỪ CODE: MySQL INT UNSIGNED; trọng lượng mặc định tính bằng gram.']
  sizes json [note: 'ĐÃ XÁC NHẬN TỪ CODE: cột tương thích tạm thời; tổ hợp chuẩn nằm ở variants.']
  colors json [note: 'ĐÃ XÁC NHẬN TỪ CODE: cột tương thích tạm thời; tổ hợp chuẩn nằm ở variants.']
  status varchar(30) [not null, default: 'needs_variant_setup', note: 'ĐÃ ÁP DỤNG: active (đang bán), inactive (ngưng bán) hoặc needs_variant_setup (nội bộ).']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']

  indexes {
    owner_id [name: 'products_owner_id']
    category [name: 'products_category']
    title [name: 'products_title']
  }
}

Table product_images [note: 'ĐÃ XÁC NHẬN: mỗi sản phẩm có tối đa 12 ảnh JPEG, PNG, WebP hoặc AVIF; mỗi ảnh tối đa 5 MB. sort_order = 0 là ảnh đại diện.'] {
  id bigint [pk, increment, note: 'ĐÃ XÁC NHẬN TỪ CODE: khóa chính.']
  product_id bigint [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE: FK đến products.']
  image_url varchar(255) [not null, note: 'ĐÃ XÁC NHẬN TỪ CODE: đường dẫn tương đối /uploads/products/...']
  sort_order int [not null, default: 0, note: 'ĐÃ XÁC NHẬN TỪ CODE: MySQL INT UNSIGNED; thứ tự ảnh.']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`, note: 'ĐÃ XÁC NHẬN TỪ CODE.']

  indexes {
    (product_id, sort_order) [name: 'product_images_product_id_sort_order']
  }
}

Table product_options [note: 'ĐÃ ÁP DỤNG: định nghĩa các loại lựa chọn động của sản phẩm, ví dụ color hoặc size.'] {
  id bigint [pk, increment]
  product_id bigint [not null]
  code varchar(50) [not null, note: 'Mã chuẩn hóa dùng trong API, ví dụ color hoặc size.']
  name varchar(80) [not null]
  sort_order int [not null, default: 0]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (product_id, code) [unique, name: 'product_options_product_code_unique']
  }
}

Table product_option_values [note: 'ĐÃ ÁP DỤNG: các giá trị thuộc một product option.'] {
  id bigint [pk, increment]
  product_option_id bigint [not null]
  value varchar(80) [not null]
  sort_order int [not null, default: 0]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (product_option_id, value) [unique, name: 'product_option_values_option_value_unique']
  }
}

Table product_variants [note: 'ĐÃ ÁP DỤNG: mỗi hàng hóa/tổ hợp thực tế có SKU và tồn kho riêng.'] {
  id bigint [pk, increment]
  product_id bigint [not null]
  sku varchar(64) [not null, note: 'Unique toàn hệ thống; backend tự sinh nếu client để trống.']
  variant_key varchar(255) [not null, note: 'Khóa tổ hợp từ option value ids đã sắp xếp; default nếu không có option.']
  price decimal(12,2) [note: 'Giá ghi đè; null thì dùng products.price.']
  image_url varchar(255) [note: 'LEGACY/COMPATIBILITY: phản chiếu ảnh variant đầu tiên; thư viện chuẩn nằm ở product_variant_images.']
  stock_quantity int [not null, default: 0, note: 'MySQL INT UNSIGNED; nguồn tồn kho chuẩn.']
  status varchar(20) [not null, default: 'active']
  is_default boolean [not null, default: false]
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    sku [unique, name: 'product_variants_sku_unique']
    (product_id, variant_key) [unique, name: 'product_variants_product_key_unique']
    (product_id, status) [name: 'product_variants_product_status']
  }
}

Table product_variant_images [note: 'ĐÃ ÁP DỤNG: thư viện ảnh độc lập của từng variant, tối đa 8 ảnh theo validation API.'] {
  id bigint [pk, increment]
  product_variant_id bigint [not null]
  image_url varchar(255) [not null, note: 'Đường dẫn tương đối /uploads/products/...']
  sort_order int [not null, default: 0, note: 'Ảnh có thứ tự nhỏ nhất là ảnh đại diện variant.']
  created_at datetime [not null, default: `CURRENT_TIMESTAMP`]
  updated_at datetime [not null, default: `CURRENT_TIMESTAMP`]

  indexes {
    (product_variant_id, sort_order) [name: 'product_variant_images_variant_order']
  }
}

Table product_variant_values [note: 'ĐÃ ÁP DỤNG: bảng nối một variant với các option value tạo nên tổ hợp.'] {
  product_variant_id bigint [not null]
  product_option_value_id bigint [not null]

  indexes {
    (product_variant_id, product_option_value_id) [pk, name: 'product_variant_values_primary']
    product_option_value_id [name: 'product_variant_values_option_value']
  }
}

Ref products_owner_fk: products.owner_id > users.id [delete: cascade, update: cascade]
Ref product_images_product_fk: product_images.product_id > products.id [delete: cascade, update: cascade]
Ref product_options_product_fk: product_options.product_id > products.id [delete: cascade, update: cascade]
Ref product_option_values_option_fk: product_option_values.product_option_id > product_options.id [delete: cascade, update: cascade]
Ref product_variants_product_fk: product_variants.product_id > products.id [delete: cascade, update: cascade]
Ref product_variant_images_variant_fk: product_variant_images.product_variant_id > product_variants.id [delete: cascade, update: cascade]
Ref product_variant_values_variant_fk: product_variant_values.product_variant_id > product_variants.id [delete: cascade, update: cascade]
Ref product_variant_values_option_value_fk: product_variant_values.product_option_value_id > product_option_values.id [delete: cascade, update: cascade]
